bin_PROGRAMS = chatroom chat_client client server
chatroom_SOURCES = src/chatroom.c src/bind.c src/bind.h
chat_client_SOURCES = src/chat_client.c src/connect.c src/connect.h
client_SOURCES = src/client.c src/connect.c src/connect.h
server_SOURCES = src/server.c src/bind.c src/bind.h

EXTRA_DIST = m4/NOTES
